
[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/site/main.rs"

[dependencies]
wasm-bindgen = "0.2.37"
rocket = "0.4.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]